--- a/documentation/website/index.html
+++ b/documentation/website/index.html
@@ -54,13 +54,8 @@
 
         <section class="header" id="Explizite und implizite Geometriedarstellung">
         <h2 class="title">Signed Distance Functions</h2>
-        <h6>Project by Carolina Reiß (<a href="mailto:albert.einstein@mailbox.tu-berlin.de">albert.einstein@mailbox.tu-berlin.de</a>)
-        </h6>
-
+        <h3 class="section-heading">Explizite und implizite Geometriedarstellung</h3>
         <div class="row">
-<!--            <div class="one column category" style="text-align: center;">-->
-<!--                <h5 class="docs-header">Teaser Image</h5>-->
-                <img class="u-max-full-width" src="images/teaser.jpg">
                     <p>In diesem Abschnitt widmen wir uns zunächst der Frage, wie wir geometrische Figuren mathematisch beschreiben können. Wir beginnen mit der intuitiven expliziten Darstellung.</p>
                     <p>Betrachten wir zum Beispiel im Zweidimensionalen einen Kreis mit Radius 1 und Zentrum \((0,0)\), so können wir alle Punkte \((x,y)\), die auf diesem liegen, explizit darstellen als $$\{ \ (x,y) = (cos \ \varphi, sin \ \varphi) \ |  \ \varphi \in \mathbb{R} \ \}$$</p>
                     <p>Wir berechnen \(x\) und \(y\) also explizit durch \(x = cos \ \varphi\) und \(y = sin \ \varphi\). Möchten wir diese Darstellung diskretisieren, so wählen wir eine geeignete Menge an Punkten aus dieser Menge aus und verbinden diese durch Liniensegmente. Die Reihenfolge, in der wir sie verbinden, entspricht der Höhe von \(\varphi\), bei Beachtung des möglichen Überlaufs. Die Entsprechung dieses Vorgehen im Dreidimensionalen ist, eine Menge von Punkten auf der Einheitskugel auszuwählen und diese durch zu Dreiecken zu verbinden, um eine Meshdarstellung der Kugel zu erhalten. </p>
