added gif for level sets

--- a/documentation/website/index.html
+++ b/documentation/website/index.html
@@ -83,6 +83,8 @@
                    <p>Gegeben eine Funktion \(f\) mit \(f: \mathbb{R}^n \rightarrow \mathbb{R}\) und eine Konstante \(c \in \mathbb{R}\), ist das Level Set der Funktion \(f\) zum Level \(c\) definiert als: $$L_c(f) = \{ \ (x_1, ..., x_n) \ | \ f(x_1, ..., x_n) = c \ \} = f^{-1}(c)  $$ </p>
                    <p>Geometrisch kann man sich das Level Set einer zweidimensionalen Funktion als Schnitt einer zweidimensionalen Oberfläche im dreidimensionalen Raum mit einer Ebene vorstellen. Die Oberfläche erhält man, indem man den \((x,y)\) Koordinaten ihren Funktionswert \(f(x,y)\) als Höhe zuordnet. Wenn man die Oberfläche, die aus allen Punkten \((x,y,f(x,y))\) besteht, mit einer zur \((x,y)\)-Ebene parallelen Ebene auf Höhe \(c\) schneidet, erhält man alle zulässigen \((x,y,c)\), also eine 1-dimensionale Figur (Linie) im zweidimensionalen Raum. </p>
                    <p>Analog erhält man als Level Set einer 3-dimensionalen Funktion eine zweidimensionale Oberfläche im dreidimensionalen Raum.</p>
+                   <img class="u-max-full-width" src="images/level_sets.gif">
+                   <p>Schnitte mit konstanten Ebenen erzeugen Level Sets</p>
         </div>
     </section>
 
